[package]
name = "neo4j"
version = "0.1.0"
edition = "2024"

[dependencies]
confy = "0.6.1"
futures = "0.3.31"
glob = "0.3.2"
neo4rs = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
backoff = { version = "0.4", features = ["tokio"] }
chrono = { version = "0.4.41", features = ["serde"] }
